--- a/migration-newip-to-ts/.eslintrc.json
+++ b/migration-newip-to-ts/.eslintrc.json
@@ -3,7 +3,9 @@
     "extends": [
         "plugin:prettier/recommended",
         "prettier",
+        "airbnb-typescript/base",
         "eslint:recommended",
+        "plugin:import/recommended",
         "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
@@ -20,6 +22,7 @@
         "no-debugger": "off",
         "no-console": 0,
         "class-methods-use-this": "off",
-        "@typescript-eslint/no-explicit-any": 2
+        "@typescript-eslint/no-explicit-any": 2,
+        "max-len": ["warn", { "code": 120 }]
     }
 }
