--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "NewsJS",
+    "name": "migrationtots",
     "version": "1.0.0",
     "description": "",
     "main": "webpack.base.config.js",
