--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -23,12 +23,16 @@
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.1.0",
         "eslint": "^7.27.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.23.3",
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-webpack-plugin": "^3.2.0",
         "html-webpack-plugin": "^5.2.0",
+        "mini-css-extract-plugin": "^2.6.1",
         "prettier": "2.2.1",
+        "sass": "^1.53.0",
+        "sass-loader": "^13.0.2",
         "style-loader": "^2.0.0",
         "ts-loader": "^9.3.1",
         "typescript": "^4.7.4",
